Refactor RemoteSpace